refactor(listener): 消息监听服务优化
- 使用虚拟线程替代传统线程实现
- 更新日志信息为中文描述
- 修复API错误信息的大小写格式
- 简化线程创建和启动逻辑
- 优化错误处理和退避机制的日志输出